examples/test/testpolicy11131.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11131
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key12: value23
      key10: value31
      key18: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value34
          key24: value13
          key44: value24
      podSelector:
        matchLabels:
          key17: value30
          key23: value28
          key6: value39
